# bsort-project

./: .gitignore  Dockerfile  README.md  pyproject.toml  pyproject.toml.bak  settings.yaml
.github/workflows/: ci.yml
src/bsort/: __init__.py  cli.py  config.py  infer.py  train.py  utils.py
